--- a/client/src/app/forms2/types/evidence-select/evidence-select.type.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-select.type.html
@@ -43,7 +43,8 @@
     *ngIf="showMgr$ | ngrxPush">
     <cvc-evidence-manager
       [cvcSelectedIds]="onEid$ | ngrxPush"
-      (cvcSelectedIdsChange)="onPopulate$.next($event)"></cvc-evidence-manager>
+      (cvcSelectedIdsChange)="onPopulate$.next($event)"
+      [cvcTableFilters]="tableFilterChange$ | ngrxPush"></cvc-evidence-manager>
   </nz-col>
 </nz-row>
 <!-- select option templates -->
