--- a/client/src/app/views/therapies/therapies-detail/therapies-summary/therapies-summary.component.html
+++ b/client/src/app/views/therapies/therapies-detail/therapies-summary/therapies-summary.component.html
@@ -5,7 +5,8 @@
     <nz-row [nzGutter]="[8, 16]">
 
       <!-- summary details -->
-      <nz-col [nzSpan]="12">
+      <cvc-my-chem-info [chemInfo]="therapy.myChemInfo"></cvc-my-chem-info>
+      <nz-col [nzSpan]="24">
         <nz-descriptions nzSize="small"
           nzLayout="vertical"
           [nzColumn]="1"
