new empty-value component for consistent na/unspecified/none value display

--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.less
@@ -2,48 +2,58 @@
 @import 'themes/default.less';
 
 :host {
-  &.clip-label {
+  &.label-max {
     .tag-label {
       overflow: hidden;
       text-overflow: ellipsis;
     }
   }
-  &.clip-label-100 {
+  &.label-max-50 {
+    .tag-label {
+      max-width: 50px;
+    }
+  }
+  &.label-max-75 {
+    .tag-label {
+      max-width: 75px;
+    }
+  }
+  &.label-max-100 {
     .tag-label {
       max-width: 100px;
     }
   }
-  &.clip-label-125 {
+  &.label-max-125 {
     .tag-label {
       max-width: 125px;
     }
   }
-  &.clip-label-150 {
+  &.label-max-150 {
     .tag-label {
       max-width: 150px;
     }
   }
-  &.clip-label-200 {
+  &.label-max-200 {
     .tag-label {
       max-width: 200px;
     }
   }
-  &.clip-label-250 {
+  &.label-max-250 {
     .tag-label {
       max-width: 250px;
     }
   }
-  &.clip-label-300 {
+  &.label-max-300 {
     .tag-label {
       max-width: 300px;
     }
   }
-  &.clip-label-400 {
+  &.label-max-400 {
     .tag-label {
       max-width: 300px;
     }
   }
-  &.clip-label-500 {
+  &.label-max-500 {
     .tag-label {
       max-width: 500px;
     }
