--- a/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/enum-filter-menu/enum-filter-menu.component.html
@@ -11,16 +11,23 @@
     ">
     <cvc-attribute-tag
       [cvcFullWidth]="true"
+      cvcContext="menu-item"
+      [cvcChecked]="cvcOption?.value === filter.value"
       [cvcAttrValue]="filter.value"></cvc-attribute-tag>
   </li>
+
   <li style="padding: 3px">
     <button
       nz-button
-      nzType="primary"
+      nzType="default"
       nzBlock
       nzSize="small"
       (click)="cvcOptionChange.next({ key: cvcColumnKey, value: null })"
       [disabled]="cvcOption?.value === null">
+      <span
+        nz-icon
+        nzType="retweet"
+        nzTheme="outline"></span>
       Reset
     </button>
   </li>
