--- a/client/src/app/forms2/components/attribute-tag/attribute-tag.component.less
+++ b/client/src/app/forms2/components/attribute-tag/attribute-tag.component.less
@@ -32,7 +32,7 @@
       padding: 3px 2px 3px 4px;
       margin: -3px 0 -3px 0;
       ::ng-deep svg {
-        transform: scale(1.25,1.25);
+        transform: scale(1.25, 1.25);
       }
     }
     .tag-label {
@@ -49,33 +49,31 @@
     }
   }
 }
-.select-item {
+
+.menu-item {
+  .default();
   nz-tag {
-    background: #f5f5f5;
-    border: 1px solid #f0f0f0;
-    margin: 0;
-    padding: 0 2px 0 0;
-    margin-inline-end: 4px;
-    max-width: 100%;
+    border: 1px solid red;
     .tag-icon {
-      display: inline-block;
-      padding: 3px 2px 3px 4px;
-      margin: -3px 0 -3px 0;
+        color: @text-color-inverse;
     }
-    .tag-label {
-      display: inline-block;
-      margin: 0;
-      padding: 0;
-      margin: -3px 0 -3px 0;
-      padding: 3px 0 3px 2px;
-      line-height: 1;
-    }
-    ::ng-deep i.ant-tag-close-icon.anticon-close {
-      transition: none;
-      margin-left: 3px;
+    &-checked {
+      border: 1px solid red;
+      .tag-icon {
+        color: @text-color-inverse;
+      }
     }
   }
 }
+
+.select-item {
+  .default();
+  nz-tag {
+    background: #f5f5f5;
+    border: 1px solid #f0f0f0;
+  }
+}
+
 .multi-select-item {
   // pull content margins to the edges of the tag, to increase
   // popover hover area
