better handling of table settings updates via single Input

--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.html
@@ -4,8 +4,7 @@
   nzSize="small">
   <nz-table
     #virtualTable
-    *ngrxLet="row$ as data"
-    [nzData]="data || []"
+    [nzData]="(row$ | ngrxPush) || []"
     cvcTableScroller
     (cvcTableScrollerOnScroll)="onScroll$.next($event)"
     (cvcTableScrollerOnFetch)="onFetch$.next($event)"
