--- a/client/src/app/forms2/types/evidence-select/evidence-select.type.html
+++ b/client/src/app/forms2/types/evidence-select/evidence-select.type.html
@@ -44,10 +44,8 @@
     <cvc-evidence-manager
       [cvcSelectedIds]="onEid$ | ngrxPush"
       (cvcSelectedIdsChange)="onPopulate$.next($event)"
-      [cvcTableFilters]="tableFilterChange$ | ngrxPush"
-      [cvcTablePreferences]="
-        tablePrefsChange$ | ngrxPush
-      "></cvc-evidence-manager>
+      [cvcTableSettings]="tableSettingsChange$ | ngrxPush"
+      ></cvc-evidence-manager>
   </nz-col>
 </nz-row>
 <!-- select option templates -->
